# ftd

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  VERSION  ftd.mod  index.md  install.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-maya.txt  requirements.txt  run_tests.py  setup.cfg
.github/workflows/: main.yml
docs/: conf.py  index.md  requirements.txt
docs/_static/css/: style.css
docs/ext/apigen/: __init__.py
docs/ext/apigen/templates/: apigen.rst_t
docs/pages/: ftd.attribute.rst  ftd.color.rst  ftd.rst  ftd.utility.rst
docs/source/: conf.py  index.md
docs/source/_static/css/: style.css
lib/py27/PyYAML-5.3.1.dist-info/: RECORD
lib/py27/six-1.16.0.dist-info/: RECORD
scripts/: build_docs.py  release.py  run_tests.py  update_colors.py
src/ftd/: __idk.py  __init__.py  action.py  algorithm.py  attribute.py  cleanup.py  color.py  common.py  connection.py  constraint.py  context.py  control.py  curve.py  datatype.py  decorator.py  deformer.py  graph.py  history.py  interaction.py  joint.py  mesh.py  name.py  ngskintools.py  node.py  offset.py  outliner.py  performance.py  plugin.py  search.py  selection.py  serialize.py  skincluster.py  transform.py  utility.py  version.py  viewport.py
src/ftd/api/: maya.py  mpy.py
src/ftd/configs/: colors.yaml  controls.yaml  prefs.yaml
src/ftd/plugins/: utility.py
src/ftd/tools/: prefs.py  proxy.py  renamer.py  toolbar.py
src/ftd/ui/: layout.py  utility.py  widget.py  window.py
tests/: conftest.py  test_attribute.py  test_color.py  test_common.py  test_constraint.py  test_control.py  test_main.py  test_prefs.py  test_vector.py  test_version.py
