[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[tool.isort]
# let isort know some dcc modules and how to sort them
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "APPLICATION", "FIRSTPARTY", "LOCALFOLDER"]
known_third_party = ["PySide2", "shiboken2", "Qt", "yaml", "six"]
known_application=["hou", "nuke", "maya", "pymel", "unreal"]

# black
profile = "black"
line_length = 79

# should be included? xD
# import_heading_future = "Future ---"
# import_heading_stdlib = "Standard Library ---"
# import_heading_thirdparty = "Third Party ---"
# import_heading_application = "Application ---"
# import_heading_firstparty = "First Party ---"
# import_heading_localfolder = "Local Project ---"
