[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[tool.isort]
# Custom sorting for some dcc package like maya
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "APPLICATION", "FIRSTPARTY", "LOCALFOLDER"]
known_third_party = ["PySide2", "shiboken2", "Qt", "yaml", "six"]
known_application=["hou", "nuke", "maya", "pymel", "unreal"]

# Configure isort to work nicely with black
profile = "black"
line_length = 79
